# PerfNetProxy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: completionQueue.hpp  completionTask.h  completionTask.hpp  httpParser.hpp  internetProtocolEnums.hpp  objectPool.hpp  platformInitializer.hpp  proxyApplication.hpp  socketClient.hpp  socketListener.hpp  socket_listener.hpp  stub_.h
include/platform/windows/: InternalSocket.h  InternalSocket.hpp  ioContext.hpp
src/: CMakeLists.txt  httpParser.cpp  main.cpp  proxyApplication.cpp  stub_.cpp
src/platform/unix/: UnixPlatformInitializer.cpp
src/platform/windows/: socketListener.cpp  win32CompletionQueue.cpp  win32PlatformInitializer.cpp  win32SocketClient.cpp  win32SocketListener.cpp
